feat: Add agent debugger, update README/doc files/examples